--- a/index2.html
+++ b/index2.html
@@ -4,14 +4,22 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>	Your page title goes here </title> 
-	<meta http-equiv="content-type" 
+	<title>	Amy's Example Page Yay </title>
+	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
-<body> 
+<body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-	<p> your content here</p>
+	<p> your joke here</p>
 </body>
+
+  <ul>
+    <li><a
+      href="https://github.com/J4502-SS16/class/wiki/Assignment-%232:-Build-Your-First-Website">This is a link to the assignment page.</a></li>
+    <li></li>
+  </ul>
+
+
 
 </html>
