--- a/index2.html
+++ b/index2.html
@@ -4,22 +4,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-	<title>	Amy's Example Page Yay </title>
+	<title>	Amy's First Assignment Page </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
-	<p> your joke here</p>
+<p>Hi, this is my class assignment. My name is Amy and my email is ahn75@mail.missouri.edu.</p>
+<p>Here is a joke:</p>
+<p>Your mom.</p>
+
+<a href="mailto:ahn75@mail.missouri.edu"><img src="me.jpg" alt="A picture of me" width="300px"/></a>
+
 </body>
 
-  <ul>
-    <li><a
-      href="https://github.com/J4502-SS16/class/wiki/Assignment-%232:-Build-Your-First-Website">This is a link to the assignment page.</a></li>
-    <li></li>
-  </ul>
-
-
+<ul>
+  <li><a href="https://github.com/J4502-SS16/class/wiki/Assignment-%232:-Build-Your-First-Website"target="_blank">This is a link to the assignment page.</a></li>
+  <li><a href="index2.html"target="_blank">A link to another page.</a></li>
+</ul>
 
 </html>
