--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+
 	<title>	Amy's First Assignment Page </title>
+
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
+
+    <!--External style sheet:-->
+    		<link rel="stylesheet" type="text/css" href="style.css" />
+
 </head>
 
 <body>
+  <div id="main">
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <p>Hi, this is my class assignment. My name is Amy and my email is ahn75@mail.missouri.edu.</p>
 <p>Here is a joke:</p>
@@ -17,10 +24,12 @@
 
 <a href="mailto:ahn75@mail.missouri.edu"><img src="me.jpg" alt="A picture of me" width="300px"/></a>
 
+</div>
 
-<ul>
+<ul id="nav">
   <li><a href="https://github.com/J4502-SS16/class/wiki/Assignment-%232:-Build-Your-First-Website">This is a link to the assignment page.</a></li>
   <li><a href="index2.html">A link to another page.</a></li>
+  <li><a href="oldindex.html">A link to my unstyled index page.</a></li>
 </ul>
 
 </body>
